# sdlBasic

sdlBasic/: CMakeLists.txt
sdlBasic/src/: main.c
